<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reg"
    android:gravity="center">

    <TextView
        android:id="@+id/tvl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/reg"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="27dp"
        android:layout_margin="27dp"
        android:hint="@string/regemail"/>

    <EditText
        android:id="@+id/regpass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:hint="@string/regpass" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/regbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00F7FF"
        android:hint="@string/regbtn" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/Rlogin"
        android:text="@string/loginnow"
        android:gravity="center"
        android:textColor="#F44336"
        android:textSize="15dp"
        android:textStyle="bold"

        />

</LinearLayout>
