<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <TextView
        android:id="@+id/tvl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:hint="@string/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnl"
        android:textColor="@color/teal_700"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/regnow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Registernow"
        android:gravity="center"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>
